--- a/Web/Areas/PSNP/Views/Home/Index.cshtml
+++ b/Web/Areas/PSNP/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Cats.Helpers
 @using Cats.Models
 @using Cats.Security
+@using Cats.Services.Workflows
 
 @{
     ViewBag.Title = Html.Translate("Index");
@@ -9,6 +10,15 @@
     //Layout = "~/Views/Shared/_MainLayout.cshtml";
     ViewBag.PageTitle = "PSNP Dashboard";
     ViewBag.PageTitleDescription = "";
+
+    #region Data Activity Indicator ViewBags
+
+    //Add this Line if the current page uses angular app , set  ViewBag.AngularAppName the value of the angular Name
+    ViewBag.AngularAppName = "dataActivityIndicatorApp";
+    //Data Activity Indicator uses ViewBag.PageName to get  Workflows configured for the page
+    ViewBag.PageName = Constants.PsnpPage;
+
+    #endregion
 }
 
 
@@ -20,8 +30,8 @@
     }
 </style>
 
-<div class="container ui-sortable" id="sortable_portlet" ng-app="myApp">
-    
+<div class="container ui-sortable" id="sortable_portlet" @*ng-app="myApp"*@ ng-app='@ViewBag.AngularAppName'>
+    @Html.Partial("_DataActivityIndicator")
     <div ng-controller="AnnualPlan" class="well form-horizontal">
         <div class="form-group">
             <label class="col-md-3 control-label "><span class="label label-primary"> @Html.Translate("Select Annual Plan")</span></label>
@@ -440,132 +450,132 @@
 
 <script>
     var app = angular.module('myApp', []);
-    
-    app.controller('PSNPDashboardController',  ['$scope', '$http', '$rootScope', function ($scope, $http, $rootScope) {
-        
-        $scope.Requests = [];
-        $scope.Requisitions = [];
-        $scope.utilizations = [];
-        $scope.Data2 = [];
-        $scope.states = ["Draft", "Approved", "Closed"];
 
-        var id = $rootScope.Id;
-        var onRequestsSuccess = function (data) {
-            $scope.Requests = data;
-        };
-        $scope.Data2 = [];
-        $scope.states = ["Draft", "Approved", "Closed"];
+    app.controller('PSNPDashboardController', [
+        '$scope', '$http', '$rootScope', function($scope, $http, $rootScope) {
 
-        var onRequisitionsSuccess = function (data) {
-            $scope.Requisitions = data;
-        };
+            $scope.Requests = [];
+            $scope.Requisitions = [];
+            $scope.utilizations = [];
+            $scope.Data2 = [];
+            $scope.states = ["Draft", "Approved", "Closed"];
 
-       
-        var onregionutilizationSuccess = function (data) {
-            $scope.utilizations = data;
-            
-        };
+            var id = $rootScope.Id;
+            var onRequestsSuccess = function(data) {
+                $scope.Requests = data;
+            };
+            $scope.Data2 = [];
+            $scope.states = ["Draft", "Approved", "Closed"];
 
-        $scope.getRequests = function () {
-            $http.post("@Url.Action("GetPsnpRequests", "Dashboard", new { Area = "PSNP" })", null).success(onRequestsSuccess);
-        };
-
-       
-        $scope.getRequisitions = function () {
-            $http.post("@Url.Action("GetPsnpRequisitions", "Dashboard", new { Area = "PSNP" })", null).success(onRequisitionsSuccess);
-        };
-
-        $scope.getRegionUtilization = function () {
-            
-            
-            $http.post("@Url.Action("GetUtilizationByRegion", "Dashboard", new { Area = "PSNP" })" + "?planId=0", null).success(onregionutilizationSuccess);
-        };
-
-        $scope.viewRequest = function (item) {
-            window.location = "@Url.Action("Details","Request",new {Area="EarlyWarning"})" + "?id=" + item.RequestId;
-        };
-        
-        $scope.viewRequisition = function (item) {
-            window.location = "@Url.Action("Allocation","ReliefRequisition",new {Area="EarlyWarning"})" + "?id=" + item.RequisitionId;
-        };
-        
-        $scope.getRequests();
-        $scope.getRequisitions();
-        $scope.getRegionUtilization();
-        
-    }]);
-    
-
-
-    app.controller('AnnualPlan', ['$scope', '$http', '$rootScope', function ($scope, $http, $rootScope) {
-
-        $scope.plans = [];
-        $http({ method: 'GET', url: '@Url.Action("GetPlans", "Dashboard", new { Area = "PSNP" })' }).success(function (data, status, headers, config) { $scope.plans = data; })
-        .error(function (data, status, headers, config) {
-
-        });
-
-        var planId;
-
-        $scope.onChange = function (id) {
-            
-            $rootScope.RequestPie = [];
-            $rootScope.RequestByStatus = [];
-            $rootScope.utilpie = [];
-            $rootScope.Id = id;
-            planId = id;
-          
-            $scope.getRequestPie();
-            $scope.getRequestPieByStatus();
-            $scope.getUtilization();
+            var onRequisitionsSuccess = function(data) {
+                $scope.Requisitions = data;
             };
 
-        $scope.getRequestPie = function () {
-            $http.post("@Url.Action("RequestPie", "Dashboard", new { Area = "PSNP"})" + "?planId=" + planId, null).success(onRequestPieSuccess);
-         };
 
-        $scope.getRequestPieByStatus = function() {
-            $http.post("@Url.Action("RequestPieByStatus", "Dashboard", new { Area = "PSNP" })" + "?planId=" + planId, null).success(onRequestPieByStatusSuccess);
-        };
-        
-        $scope.getUtilization = function () {
-            //alert('jas');
-            $http.post("@Url.Action("GetUtilizationReport", "Dashboard", new { Area = "PSNP" })" + "?planId=" + planId, null).success(onDispatchesSuccess);
-        };
+            var onregionutilizationSuccess = function(data) {
+                $scope.utilizations = data;
 
-        var onDispatchesSuccess = function (data) {
-            $scope.utilpie.push(["Above 18", data[0].Above18]);
-            $scope.utilpie.push(["Between 5 and 18", data[0].Bet5and18]);
-            $scope.utilpie.push(["Below 5", data[0].Below5]);
+            };
 
-        };
+            $scope.getRequests = function() {
+                $http.post("@Url.Action("GetPsnpRequests", "Dashboard", new {Area = "PSNP"})", null).success(onRequestsSuccess);
+            };
 
 
+            $scope.getRequisitions = function() {
+                $http.post("@Url.Action("GetPsnpRequisitions", "Dashboard", new {Area = "PSNP"})", null).success(onRequisitionsSuccess);
+            };
+
+            $scope.getRegionUtilization = function() {
 
 
-        var onRequestPieSuccess = function (data) {
-            for (var i in data) {
-                $scope.RequestPie.push([data[i].Region, data[i].Count]);
-                console.log([data[i].Region, data[i].Count]);
-            }
-        };
+                $http.post("@Url.Action("GetUtilizationByRegion", "Dashboard", new {Area = "PSNP"})" + "?planId=0", null).success(onregionutilizationSuccess);
+            };
 
-        var onRequestPieByStatusSuccess = function(data) {
+            $scope.viewRequest = function(item) {
+                window.location = "@Url.Action("Details", "Request", new {Area = "EarlyWarning"})" + "?id=" + item.RequestId;
+            };
 
-            for (var key in data) {
-                $scope.RequestByStatus.push([key, data[key]]);
-                console.log([key, data[key]]);
-            }
-        };
-        
+            $scope.viewRequisition = function(item) {
+                window.location = "@Url.Action("Allocation", "ReliefRequisition", new {Area = "EarlyWarning"})" + "?id=" + item.RequisitionId;
+            };
 
-       }]);
+            $scope.getRequests();
+            $scope.getRequisitions();
+            $scope.getRegionUtilization();
+
+        }
+    ]);
 
 
+    app.controller('AnnualPlan', [
+        '$scope', '$http', '$rootScope', function($scope, $http, $rootScope) {
 
-    app.directive('statusClass', function () {
-        return function (scope, elem, attrs) {
-            scope.$watch(attrs.statusClass, function (value) {
+            $scope.plans = [];
+            $http({ method: 'GET', url: '@Url.Action("GetPlans", "Dashboard", new {Area = "PSNP"})' }).success(function(data, status, headers, config) { $scope.plans = data; })
+                .error(function(data, status, headers, config) {
+
+                });
+
+            var planId;
+
+            $scope.onChange = function(id) {
+
+                $rootScope.RequestPie = [];
+                $rootScope.RequestByStatus = [];
+                $rootScope.utilpie = [];
+                $rootScope.Id = id;
+                planId = id;
+
+                $scope.getRequestPie();
+                $scope.getRequestPieByStatus();
+                $scope.getUtilization();
+            };
+
+            $scope.getRequestPie = function() {
+                $http.post("@Url.Action("RequestPie", "Dashboard", new {Area = "PSNP"})" + "?planId=" + planId, null).success(onRequestPieSuccess);
+            };
+
+            $scope.getRequestPieByStatus = function() {
+                $http.post("@Url.Action("RequestPieByStatus", "Dashboard", new {Area = "PSNP"})" + "?planId=" + planId, null).success(onRequestPieByStatusSuccess);
+            };
+
+            $scope.getUtilization = function() {
+                //alert('jas');
+                $http.post("@Url.Action("GetUtilizationReport", "Dashboard", new {Area = "PSNP"})" + "?planId=" + planId, null).success(onDispatchesSuccess);
+            };
+
+            var onDispatchesSuccess = function(data) {
+                $scope.utilpie.push(["Above 18", data[0].Above18]);
+                $scope.utilpie.push(["Between 5 and 18", data[0].Bet5and18]);
+                $scope.utilpie.push(["Below 5", data[0].Below5]);
+
+            };
+
+
+            var onRequestPieSuccess = function(data) {
+                for (var i in data) {
+                    $scope.RequestPie.push([data[i].Region, data[i].Count]);
+                    console.log([data[i].Region, data[i].Count]);
+                }
+            };
+
+            var onRequestPieByStatusSuccess = function(data) {
+
+                for (var key in data) {
+                    $scope.RequestByStatus.push([key, data[key]]);
+                    console.log([key, data[key]]);
+                }
+            };
+
+
+        }
+    ]);
+
+
+    app.directive('statusClass', function() {
+        return function(scope, elem, attrs) {
+            scope.$watch(attrs.statusClass, function(value) {
                 elem.addClass("label");
                 if (value == '1') {
                     elem.removeClass('label-success');
@@ -590,15 +600,15 @@
 
 
     /* Directives */
-    app.directive('drawUtilizationPie', function () {
+    app.directive('drawUtilizationPie', function() {
         // return the directive link function. (compile function not needed)
-        return function (scope, element, attrs) {
+        return function(scope, element, attrs) {
             var container = $(element).attr("id");
             // watch the expression, and update the UI on change.
-            scope.$watch('utilpie', function () {
+            scope.$watch('utilpie', function() {
                 drawPlot();
             }, true);
-            var drawPlot = function () {
+            var drawPlot = function() {
                 var chart;
                 chart = new Highcharts.Chart({
                     chart: {
@@ -631,80 +641,28 @@
                             showInLegend: true
                         }
                     },
-                    series: [{
-                        type: 'pie',
-                        name: 'Percentage',
-                        data: scope.utilpie,
-                    }]
+                    series: [
+                        {
+                            type: 'pie',
+                            name: 'Percentage',
+                            data: scope.utilpie,
+                        }
+                    ]
                 });
             }
         }
     });
 
 
-
-
-    /* Directives */
-    app.directive('drawRequestPie', function () {
+/* Directives */
+    app.directive('drawRequestPie', function() {
         // return the directive link function. (compile function not needed)
-        
-        return function (scope, element, attrs) {
-            
-               var container = $(element).attr("id");
-               // watch the expression, and update the UI on change.
-               scope.$watch('RequestPie', function () {
-                   drawPlot();
-               }, true);
-               var drawPlot = function () {
-                   var chart;
-                   chart = new Highcharts.Chart({
-                       chart: {
-                           renderTo: container
-                       },
-                       credits: {
-                           enabled: false
-                       },
-                       title: {
-                           text: ''
-                       },
-                       exporting: {
-                           enabled: false
-                       },
-                       //tooltip: {
-                       //    pointFormat: '{series.name}: <b>{point.percentage}</b>% <b>({point.y})</b> Requests',
-                       //    percentageDecimals: 1
-                       //},
-                       
-                       tooltip: {
-                           pointFormat: '{series.name}: <b>{point.percentage:.2f}%</b> ({point.y}) Requests',
-                       },
-                       plotOptions: {
-                           pie: {
-                               allowPointSelect: true,
-                               cursor: 'pointer',
-                               dataLabels: {
-                                   enabled: false
-                               },
-                               showInLegend: true
-                           }
-                       },
-                       series: [{
-                           type: 'pie',
-                           name: 'Percentage',
-                           data: scope.RequestPie
-                       }]
-                   });
-               }
-           }
-       });
 
-    /* Directives */
-    app.directive('drawRequestPieStatus', function () {
-        // return the directive link function. (compile function not needed)
         return function(scope, element, attrs) {
+
             var container = $(element).attr("id");
             // watch the expression, and update the UI on change.
-            scope.$watch('RequestByStatus', function () {
+            scope.$watch('RequestPie', function() {
                 drawPlot();
             }, true);
             var drawPlot = function() {
@@ -740,16 +698,74 @@
                             showInLegend: true
                         }
                     },
-                    series: [{
-                        type: 'pie',
-                        name: 'Percentage',
-                        data: scope.RequestByStatus
-                    }]
+                    series: [
+                        {
+                            type: 'pie',
+                            name: 'Percentage',
+                            data: scope.RequestPie
+                        }
+                    ]
+                });
+            }
+        }
+    });
+
+    /* Directives */
+    app.directive('drawRequestPieStatus', function() {
+        // return the directive link function. (compile function not needed)
+        return function(scope, element, attrs) {
+            var container = $(element).attr("id");
+            // watch the expression, and update the UI on change.
+            scope.$watch('RequestByStatus', function() {
+                drawPlot();
+            }, true);
+            var drawPlot = function() {
+                var chart;
+                chart = new Highcharts.Chart({
+                    chart: {
+                        renderTo: container
+                    },
+                    credits: {
+                        enabled: false
+                    },
+                    title: {
+                        text: ''
+                    },
+                    exporting: {
+                        enabled: false
+                    },
+                    //tooltip: {
+                    //    pointFormat: '{series.name}: <b>{point.percentage}</b>% <b>({point.y})</b> Requests',
+                    //    percentageDecimals: 1
+                    //},
+
+                    tooltip: {
+                        pointFormat: '{series.name}: <b>{point.percentage:.2f}%</b> ({point.y}) Requests',
+                    },
+                    plotOptions: {
+                        pie: {
+                            allowPointSelect: true,
+                            cursor: 'pointer',
+                            dataLabels: {
+                                enabled: false
+                            },
+                            showInLegend: true
+                        }
+                    },
+                    series: [
+                        {
+                            type: 'pie',
+                            name: 'Percentage',
+                            data: scope.RequestByStatus
+                        }
+                    ]
                 });
             };
         };
     });
 
 </script>
+
+<script src="~/Scripts/DataActivityIndicator/DataActivityIndicator.JS"></script>
 
 
