--- a/Web/Areas/EarlyWarning/Views/HRD/Compare.cshtml
+++ b/Web/Areas/EarlyWarning/Views/HRD/Compare.cshtml
@@ -4,103 +4,98 @@
 @using Kendo.Mvc.UI
 @using LanguageHelpers.Localization
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
-}
-
-@section Title
-{
-Plans
-}
-
-@section PageTitle
-{
-    <h1 class="hdr-blck big ">
-        @Html.Translate("Compare HRD")
-    </h1>
+     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Compare HRD");
+    ViewBag.PageTitleDescription = "";
 }
 
 <div class="row">
     @Html.Partial("_HRDLeftBar")
-    <div class="col-md-10  col-sm-9">
-        <div class=" box box-primary ">
-            <div class="box-body row">
-                <div class="row">
-                    <div class="col-md-6">
+    <div class="col-md-9">
+        <div class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("HRD Lists")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
 
-                        <div class="box box-solid">
-                            <div class="box-header">
-                                <div class="bold col-md-4">HRD:</div>
-                               <div class="col-md-6"> @Html.DropDownList("firstHrd", null, String.Empty, new { @class = "form-control" })</div>
-                            </div>
-                            <div class="box-body">
-                              
-                                    @(Html.Kendo().Grid<CompareHrdViewModel>()
-                                       .Name("grid1")
-                                       .Columns(columns =>
-                                                    {
-
-                                                        columns.Bound(t => t.Region);
-                                                        columns.Bound(t => t.BeneficiaryNumber).HtmlAttributes(new { align = "Right" });
-                                                        columns.Bound(t => t.Percentage).HtmlAttributes(new { align = "Center" }).Format("{0:0.00}%");
-                                                    })
-                                       .Scrollable()
-                                       .Sortable()
-                                       .HtmlAttributes(new { style = "height:340px;" })
-                                       .DataSource(datasource =>
-                                                   datasource
-                                                       .Ajax()
-                                                       .Model(model => model.Id(p => p.HrdID))
-                                                       .Read(read => read.Action("HRDComaparison_Read", "HRD").Data("filterData"))))
-
-
-
-                                
+                    <a class="btn btn-icon-only btn-default fullscreen"></a>
+                </div>
+            </div>
+            <div class="portlet-body row">
+                <div class="col-md-6">
+                    <div class="well row form-horizontal">
+                        <div class="col-md-9">
+                            <div class="form-group">
+                                <label class="control-label col-md-6">HRD</label>
+                                <div class="col-md-6">
+                                    @Html.DropDownList("firstHrd", null, String.Empty, new {@class = "form-control"})
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="">
+                        @(Html.Kendo().Grid<CompareHrdViewModel>()
+                                      .Name("grid1")
+                                      .Columns(columns =>
+                                      {
 
-                        <div class="box box-solid">
-                            <div class="box-header">
-                                <div class="bold col-md-4">HRD To Compare:</div>
-                                <div class="col-md-6"> @Html.DropDownList("secondHrd", null, String.Empty, new { @class = "form-control" })</div>
+                                          columns.Bound(t => t.Region);
+                                          columns.Bound(t => t.BeneficiaryNumber).HtmlAttributes(new { align = "Right" });
+                                          columns.Bound(t => t.Percentage).HtmlAttributes(new { align = "Center" }).Format("{0:0.00}%");
+                                      })
+                                      .Scrollable()
+                                      .Sortable()
+                                      .HtmlAttributes(new { style = "height:340px;" })
+                                      .DataSource(datasource =>
+                                          datasource
+                                              .Ajax()
+                                              .Model(model => model.Id(p => p.HrdID))
+                                              .Read(read => read.Action("HRDComaparison_Read", "HRD").Data("filterData"))))
+
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="well row form-horizontal">
+                        <div class="col-md-9">
+                            <div class="form-group">
+                                <label class="control-label col-md-6">HRD To Compare</label>
+                                <div class="col-md-6">
+                                    @Html.DropDownList("secondHrd", null, String.Empty, new { @class = "form-control" })
+                                </div>
                             </div>
-                            <div class="box-body">
-                               
+                        </div>
+                    </div>
+                    <div class="">
+                        @(Html.Kendo().Grid<CompareHrdViewModel>()
+                                      .Name("Grid2")
+                                      .Columns(columns =>
+                                      {
 
-                                    @(Html.Kendo().Grid<CompareHrdViewModel>()
-                              .Name("Grid2")
-                              .Columns(columns =>
-                                           {
-
-                                               columns.Bound(t => t.Region);
-                                               columns.Bound(t => t.BeneficiaryNumber).HtmlAttributes(new { align = "Right" });
-                                               columns.Bound(t => t.Percentage).HtmlAttributes(new { align = "Center" }).Format("{0:0.00}%");
-                                           })
-                              .Scrollable()
-                              .Sortable()
-                              .HtmlAttributes(new { style = "height:340px;" })
-                              .DataSource(datasource =>
+                                          columns.Bound(t => t.Region);
+                                          columns.Bound(t => t.BeneficiaryNumber).HtmlAttributes(new { align = "Right" });
+                                          columns.Bound(t => t.Percentage).HtmlAttributes(new { align = "Center" }).Format("{0:0.00}%");
+                                      })
+                                      .Scrollable()
+                                      .Sortable()
+                                      .HtmlAttributes(new { style = "height:340px;" })
+                                      .DataSource(datasource =>
                                           datasource
                                               .Ajax()
                                               .Model(model => model.Id(p => p.HrdID))
                                               .Read(read => read.Action("HRDComaparisonTo_Read", "HRD").Data("filterSecondData"))))
 
-
-                               
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
 
 <script type="text/javascript">
 
